@@ -10,7 +10,7 @@ main_freebsd_task:
     - pkg install --yes autoconf automake
   main_build_script:
     - ./autogen.sh
-    - ./configure --enable-tests CFLAGS='-O3 -fPIC'
+    - ./configure --enable-tests CFLAGS='-O3'
     - make
     - sudo make install
   main_test_script:
@@ -25,7 +25,7 @@ mruby_freebsd_task:
     - unzip mruby-3.0.0.zip
   main_build_script:
     - ./autogen.sh
-    - ./configure CFLAGS='-O3 -fPIC'
+    - ./configure CFLAGS='-O3'
     - make
     - sudo make install
   mruby_test_script:
@@ -45,7 +45,7 @@ ruby_freebsd_task:
     - sudo make install
   main_build_script:
     - ./autogen.sh
-    - ./configure CFLAGS='-O3 -fPIC'
+    - ./configure CFLAGS='-O3'
     - make
     - sudo make install
   ruby_build_script:
@@ -67,7 +67,7 @@ rust_freebsd_task:
     - curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
   main_build_script:
     - ./autogen.sh
-    - ./configure CFLAGS='-O3 -fPIC'
+    - ./configure CFLAGS='-O3'
     - make
     - sudo make install
   rust_test_script:
