@@ -18,7 +18,7 @@ jobs:
       - name: autogen
         run: ./autogen.sh
       - name: configure
-        run: ./configure CFLAGS='-O3 -fPIC'
+        run: ./configure CFLAGS='-O3'
       - name: make
         run: make
       - name: install
