@@ -14,6 +14,6 @@ export     AR="$CROSS-ar"
 export     CC="$CROSS-gcc"
 export RANLIB="$CROSS-ranlib"
 
-export CFLAGS='-ffreestanding -nostdlib -fno-builtin -fno-stack-protector -fno-pic'
+export CFLAGS='-ffreestanding -nostdlib -fno-builtin -fno-stack-protector'
 
-"$REPO/configure" --host="$HOST" --prefix="$PREFIX" --with-libc
+"$REPO/configure" --host="$HOST" --prefix="$PREFIX" --disable-pic --with-libc
