@@ -7,6 +7,4 @@ if [ -f "$REPO/Makefile" ]; then make -C "$REPO" distclean; fi
 
 PREFIX="$REPO/dest/dev-native"
 
-export CFLAGS='-fPIC'
-
 "$REPO/configure" --prefix="$PREFIX" --enable-tests
