@@ -14,6 +14,6 @@ export     AR="$TARGET-ar"
 export     CC="$TARGET-gcc"
 export RANLIB="$TARGET-ranlib"
 
-export CFLAGS='-ffreestanding -nostdlib -fno-builtin -fno-stack-protector -fno-pic -mabi=sysv -mcmodel=kernel -mno-80387 -mno-red-zone'
+export CFLAGS='-ffreestanding -nostdlib -fno-builtin -fno-stack-protector -mabi=sysv -mcmodel=kernel -mno-80387 -mno-red-zone'
 
-"$REPO/configure" --host="$HOST" --prefix="$PREFIX" --with-libc
+"$REPO/configure" --host="$HOST" --prefix="$PREFIX" --disable-pic --with-libc
