@@ -5,6 +5,4 @@ set -e
 REPO="$(realpath "$(dirname "$(realpath "$0")")/..")"
 if [ -f "$REPO/Makefile" ]; then make -C "$REPO" distclean; fi
 
-export CFLAGS='-fPIC'
-
 "$REPO/configure" --enable-tests
